# ksre

./: Cargo.toml
ksre-tui/: Cargo.toml
