[package]
name = "ksre-tui"
version = "0.1.1"
edition = "2021"
description = "ksre-tui is a k8s visual command line tool."
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/xs-fork/ksre"
repository = "https://github.com/xs-fork/ksre"
categories = ["command-line-utilities"]
keywords = ["cli"]

[lib]
name = "libksre"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = "4.4.18"
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
k8s-openapi = { version = "0.21.0", features = ["latest"] }
kube = { version = "0.88.1", features = ["runtime", "derive", "kube-client", "ws"] }
nucleo-matcher = "0.3.0"
# ratatui = { version = "0.25.0", features = ["all-widgets"] }
ratatui = { version = "0.26.0-alpha.3", features = ["all-widgets"] }
serde = "1.0.197"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tui-textarea = "0.4.0"
jdks = "0.1.1"
sdkman-cli-native = "0.4.6"
xml-rsl = "0.1.0"
toml-rsl = "0.1.0"
tar-rsl = "0.1.0"
ssh2-rsl = "0.1.0"
crypto-rsl = "0.1.0"